--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -9,7 +9,7 @@
         <!-- Meta Description -->
         <meta name="description" content="Techium is a digital agency">
         <!-- Standard favicon -->
-        <link rel="icon" href="./favicon.ico" type="image/x-icon" >
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" >
         <!-- Recommended favicon format -->
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
