--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -23,15 +23,13 @@
                 <h2>We help you build your brand!</h2>
             </section>
             <section>
-                <h2>
-                    Services
-                    <h3>Design & Concept</h3>
-                    <h3>Digital Strategy</h3>
-                    <h3>Content Strategy</h3>
-                    <h3>UX Design</h3>
-                    <h3>Web Development</h3>
-                    <h3>Social Media</h3>
-                </h2>
+                <h2>Services</h2>                    
+                <h3>Design & Concept</h3>
+                <h3>Digital Strategy</h3>
+                <h3>Content Strategy</h3>
+                <h3>UX Design</h3>
+                <h3>Web Development</h3>
+                <h3>Social Media</h3>               
             </section>
             <section>
                 <h2>Works</h2>
@@ -46,12 +44,10 @@
                 </article>
             </section>
             <section>
-                <h2>
-                    About Us
-                    <h3>Who are we</h3>
-                    <h3>Our culture</h3>
-                    <h3>How we work</h3>
-                </h2>
+                <h2>About Us</h2>
+                <h3>Who are we</h3>
+                <h3>Our culture</h3>
+                <h3>How we work</h3>                
             </section>
             <section>
                 <h2>Latest news</h2>
