--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -128,7 +128,9 @@
             </div>
         </section>
     </main>
-    <footer>Footer</footer>
+    <footer>
+        <div>Footer</div>
+    </footer>
 </body>
 
 </html>
