--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -19,7 +19,9 @@
     <!-- Header -->
     <header>
         <div>
-            <span>Techium</span>
+            <div>
+                <a href="/"><span>Techium</span></a>
+            </div>
             <nav></nav>
         </div>
     </header>
