--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Homepage - Contact</title>
+    <title>Contact - Techium</title>
     <!-- Meta Description -->
     <meta name="description" content="Techium is a digital agency">
     <!-- Standard favicon -->
