--- a/0x00-html_advanced/31-index.html
+++ b/0x00-html_advanced/31-index.html
@@ -206,9 +206,9 @@
     <!-- Footer -->
     <footer>
         <address>
-            address: 234 Washington Street<br>
+            234 Washington Street <br>
             Urbana, Illinois
-        </address>
+          </address>
         <div>
             <ul>
                 <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a> <!-- absolute url -->
