--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -134,7 +134,7 @@
                 <h2>Table</h2>
             </header>
             <table>
-                <caption>Star Warsz Trilogy Data</caption>
+                <caption>Star Wars Trilogy Data</caption>
                 <tr>
                     <th scope="col">Title</th>
                     <th scope="col">Director</th>
