--- a/0x04-flexbox/100-article.html
+++ b/0x04-flexbox/100-article.html
@@ -80,14 +80,14 @@
                                     <h2>
                                         Prioris generis est docilitas, memoria
                                     </h2>
-                                    <ul>
+                                    <ol>
                                         <li>
                                             Nec enim, dum metuit, iustus est, et certe, si metuere destiterit, non erit;
                                         </li>
                                         <li>
                                             Quid enim de amicitia statueris utilitatis causa expetenda vides.
                                         </li>
-                                    </ul>
+                                    </ol>
                                     <p>
                                         Morbi pharetra congue ante ac tincidunt. Donec euismod eu mauris nec laoreet.
                                         Praesent id sodales ipsum. Aliquam erat volutpat. Ut porta sem eget libero
@@ -118,26 +118,31 @@
                                         Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.
                                     </h2>
                                     <p>
-                                        Apparet statim, quae sint officia, quae actiones. Quae in controversiam veniunt,
-                                        de iis, si placet, disseramus.
                                         <a href="https://www.holbertonschool.com/" target="_blank"
                                             rel="noopener noreferrer">
                                             Apparet statim, quae sint officia, quae actiones.
-                                        </a>
+                                        </a>Quae in controversiam veniunt,
+                                        de iis, si placet, disseramus.
                                     </p>
                                     <ul>
                                         <li>
                                             Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P.
                                         </li>
                                         <li>
-                                            Quis est autem dignus nomine hominis, qui unum diem totum velit esse in genere isto voluptatis?
+                                            Quis est autem dignus nomine hominis, qui unum diem totum velit esse in
+                                            genere isto voluptatis?
                                         </li>
                                         <li>
                                             Sed in rebus apertissimis nimium longi sumus.
                                         </li>
                                     </ul>
                                     <p>
-                                        Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Atqui, inquam, Cato, si istud optinueris, traducas me ad te totum licebit. Nemo nostrum istius generis asotos iucunde putat vivere. Res enim se praeclare habebat, et quidem in utraque parte. Qui autem esse poteris, nisi te amor ipse ceperit? Ita fit cum gravior, tum etiam splendidior oratio. De vacuitate doloris eadem sententia erit. Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum.
+                                        Hoc etsi multimodis reprehendi potest, tamen accipio, quod dant. Atqui, inquam,
+                                        Cato, si istud optinueris, traducas me ad te totum licebit. Nemo nostrum istius
+                                        generis asotos iucunde putat vivere. Res enim se praeclare habebat, et quidem in
+                                        utraque parte. Qui autem esse poteris, nisi te amor ipse ceperit? Ita fit cum
+                                        gravior, tum etiam splendidior oratio. De vacuitate doloris eadem sententia
+                                        erit. Sin tantum modo ad indicia veteris memoriae cognoscenda, curiosorum.
                                     </p>
                                 </article>
                                 <!-- Aside section -->
