--- a/0x05-form/04-article.html
+++ b/0x05-form/04-article.html
@@ -233,7 +233,7 @@
                                             </label>
                                             <div class="form-field">
                                                 <span class="form-field-container">
-                                                    <textarea name="your-comment" id="your-comment" placeholder="Write your comment here" maxlength="10" accesskey="c" required columns="30" rows="6"></textarea>
+                                                    <textarea name="your-comment" id="your-comment" placeholder="Write your comment here" minlength="10" accesskey="c" required columns="30" rows="6"></textarea>
                                                 </span>
                                             </div>
                                         </div>
