--- a/0x07-accessibility/skip-links/01-article.html
+++ b/0x07-accessibility/skip-links/01-article.html
@@ -14,7 +14,7 @@
 
 <body class="article-page">
     <!-- Skip links -->
-    <nav aria-label="skip links">
+    <nav aria-label="Skip links">
         <ul class="off-screen">
             <li>
                 <a href="#a11y-primary-nav" class="skip-link">
