--- a/0x07-accessibility/skip-links/01-index.html
+++ b/0x07-accessibility/skip-links/01-index.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Skip links -->
-    <nav aria-label="skip links">
+    <nav aria-label="Skip links">
         <ul class="off-screen">
             <li>
                 <a href="#a11y-primary-nav" class="skip-link">
@@ -41,7 +41,7 @@
                     <label class="menu-icon" for="menu-btn">
                         <span class="navicon"></span>
                     </label>
-                    <nav class="navbar-menu" id="a11y-primary-nav" tabindex="-1"
+                    <nav class="navbar-menu" id="a11y-primary-nav" tabindex="-1">
                         <ul class="nav">
                             <li class="nav-item">
                                 <a href="/" class="nav-link">Home</a>
