--- a/0x07-accessibility/fix-a11y/08-index.html
+++ b/0x07-accessibility/fix-a11y/08-index.html
@@ -183,7 +183,7 @@
                     <div class="footer-widget">
                         <span>Follow Me</span>
                         <p>Let us be social</p>
-                        <div><a href="#"><i class="facebook-icon" aria-label="Facebook"></i></a><a href="#"><i class="twitter-icon" aria-label="Twitter"></i></a>
+                        <div><a href="#" aria-label="Facebook"><i class="facebook-icon"></i></a><a href="#" aria-label="Twitter"><i class="twitter-icon"></i></a>
                         </div>
                     </div>
                 </div>
