--- a/0x07-accessibility/fix-a11y/09-index.html
+++ b/0x07-accessibility/fix-a11y/09-index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </section>
-        <section class="section">
+        <div class="section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3">
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <section class="section">
             <div class="container">
                 <div class="row">
